# cpp_junior_test

./: CMakeLists.txt  Makefile  README.md
client/: Client.cpp  Client.h  main.cpp
pkg/logger/: Logger.cpp  Logger.h
pkg/parser/: parser.cpp  parser.h
server/: Server.cpp  Server.h  main.cpp
